RESOLVED FIXED213271
Web Inspector: ASSERTION FAILED: decodedLength >= dataLength at WebCore::NetworkResourcesData::ResourceData::decodeDataToContent()
https://bugs.webkit.org/show_bug.cgi?id=213271
Summary Web Inspector: ASSERTION FAILED: decodedLength >= dataLength at WebCore::Netw...
Devin Rousso
Reported 2020-06-16 16:52:47 PDT
.
Attachments
Patch (4.54 KB, patch)
2020-06-16 16:57 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2020-06-16 16:53:07 PDT
Devin Rousso
Comment 2 2020-06-16 16:57:39 PDT
Maciej Stachowiak
Comment 3 2020-06-16 19:30:09 PDT
Comment on attachment 402055 [details] Patch Is it possible to add a test case for this?
Devin Rousso
Comment 4 2020-06-18 14:44:21 PDT
(In reply to Maciej Stachowiak from comment #3) > Comment on attachment 402055 [details] > Patch > > Is it possible to add a test case for this? I'm not really sure what's to test here. The primary change/fix is just removing an incorrect `ASSERT` (specifically, it's possible for the decoded size of a resource to be smaller than its encoded size). Furthermore, this logic (meaning `m_contentSize`) only really starts taking effect once there's 200MB (`maximumResourcesContentSize`) of data being stored, at which point the oldest content is evicted. It exists just to make sure Web Inspector doesn't hold onto data forever, eventually crashing when we hit our 4GB limit.
EWS
Comment 5 2020-06-18 15:11:26 PDT
Committed r263231: <https://trac.webkit.org/changeset/263231> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402055 [details].
Note You need to log in before you can comment on or make changes to this bug.