Source/WebCore/inspector/NetworkResourcesData.cpp
@@ -58,11 +58,6 @@ void NetworkResourcesData::ResourceData::setContent(const String& content, bool 
     m_base64Encoded = base64Encoded;
 }
 
-static size_t contentSizeInBytes(const String& content)
-{
-    return content.isNull() ? 0 : content.impl()->sizeInBytes();
-}
-
 unsigned NetworkResourcesData::ResourceData::removeContent()
 {
     unsigned result = 0;
@@ -74,7 +69,7 @@ unsigned NetworkResourcesData::ResourceData::removeContent()
 
     if (hasContent()) {
         ASSERT(!hasData());
-        result = contentSizeInBytes(m_content);
+        result = m_content.sizeInBytes();
         m_content = String();
     }
     return result;
@@ -100,7 +95,7 @@ void NetworkResourcesData::ResourceData::appendData(const char* data, size_t dat
         m_dataBuffer->append(data, dataLength);
 }
 
-size_t NetworkResourcesData::ResourceData::decodeDataToContent()
+unsigned NetworkResourcesData::ResourceData::decodeDataToContent()
 {
     ASSERT(!hasContent());
 
@@ -116,9 +111,7 @@ size_t NetworkResourcesData::ResourceData::decodeDataToContent()
 
     m_dataBuffer = nullptr;
 
-    size_t decodedLength = contentSizeInBytes(m_content);
-    ASSERT(decodedLength >= dataLength);
-    return decodedLength - dataLength;
+    return m_content.sizeInBytes() - dataLength;
 }
 
 NetworkResourcesData::NetworkResourcesData()
@@ -194,7 +187,7 @@ void NetworkResourcesData::setResourceContent(const String& requestId, const Str
     if (!resourceData)
         return;
 
-    size_t dataLength = contentSizeInBytes(content);
+    size_t dataLength = content.sizeInBytes();
     if (dataLength > m_maximumSingleResourceContentSize)
         return;
     if (resourceData->isContentEvicted())
@@ -258,7 +251,7 @@ void NetworkResourcesData::maybeDecodeDataToContent(const String& requestId)
         return;
 
     m_contentSize += resourceData->decodeDataToContent();
-    size_t dataLength = contentSizeInBytes(resourceData->content());
+    size_t dataLength = resourceData->content().sizeInBytes();
     if (dataLength > m_maximumSingleResourceContentSize)
         m_contentSize -= resourceData->evictContent();
 }
